# T-app

./: .Config.toml  .env.development  .env.production  .gitignore  .todo  README.md  components.d.ts  development-log-20241126.md  event.md  index.html  package.json  tsconfig.json  vite.config.ts
public/: audio-processor.js  settings.html
src/: App.vue  main.ts
src-tauri/: .Config.toml  Cargo.toml  Config.toml  tauri.conf.json
src-tauri/src/: constraint.rs  lib.rs  main.rs  state.rs  types.rs  ws.rs
src-tauri/src/.bin/: test.rs
src-tauri/src/audio/: audio.rs  audio_pipeline.rs  cache.rs  controller.rs  func.rs  mod.rs  process.rs
src-tauri/src/commands/: audio.rs  mod.rs
src-tauri/src/utils/: config.rs  controller.rs  device.rs  log.rs  mod.rs  ws.rs
src-tauri/src/utils/frame/: listen.rs  mod.rs  tts.rs
src/api/: user.ts
src/components/: SvgIcon.vue  VoiceAssistant.vue
src/constants/: constants.ts
src/lib/: websocket.ts
src/router/: index.ts
src/stores/: voiceStore.ts
src/types/: user.ts
src/views/: ChatView.vue  CompanionView.vue  HomeView.vue  LoginView.vue  NumbermanView.vue  TestView.vue  VoiceView.vue
