[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hughsean Feng"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.97"
cpal = "0.15.3"
futures-util = "0.3.31"
lazy_static = "1.5.0"
opus = "0.3.0"
rubato = "0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.44.1", features = ["time"] }
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }

[[bin]]
name = "test"
